{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 21,
  "lineage": "5e36cac4-64c1-52cc-1665-f7ab67928fb2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af702be5bae4ba77",
            "arn": "arn:aws:ec2:eu-north-1:143985718263:elastic-ip/eipalloc-0af702be5bae4ba77",
            "association_id": "eipassoc-09cab85ba087db8ca",
            "domain": "vpc",
            "id": "eipalloc-0af702be5bae4ba77",
            "instance": "i-042895e8bb21b8201",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0507c917b07ffa560",
            "private_dns": "ip-172-31-33-3.eu-north-1.compute.internal",
            "private_ip": "172.31.33.3",
            "public_dns": "ec2-13-62-198-38.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.198.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "trump-card-eip",
              "Project": "trump-card"
            },
            "tags_all": {
              "Name": "trump-card-eip",
              "Project": "trump-card"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.deployer",
            "aws_security_group.app",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f99518b24aa2f21",
            "arn": "arn:aws:ec2:eu-north-1:143985718263:elastic-ip/eipalloc-08f99518b24aa2f21",
            "association_id": "eipassoc-06d26973217f8698a",
            "domain": "vpc",
            "id": "eipalloc-08f99518b24aa2f21",
            "instance": "i-01cc571695f0e6a7c",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0e52d24faafdfd6db",
            "private_dns": "ip-172-31-7-142.eu-north-1.compute.internal",
            "private_ip": "172.31.7.142",
            "public_dns": "ec2-51-21-14-132.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.14.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "trump-card-monitoring-eip",
              "Project": "trump-card"
            },
            "tags_all": {
              "Name": "trump-card-monitoring-eip",
              "Project": "trump-card"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.monitoring",
            "aws_key_pair.deployer",
            "aws_security_group.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cda11afd45b74b89",
            "arn": "arn:aws:ec2:eu-north-1:143985718263:instance/i-042895e8bb21b8201",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042895e8bb21b8201",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "trump-card-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0507c917b07ffa560",
            "private_dns": "ip-172-31-33-3.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.3",
            "public_dns": "ec2-13-62-198-38.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.198.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019f301c950cd163d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "trump-card-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0047c28e5fb1903f7",
            "tags": {
              "Name": "trump-card-server",
              "Project": "trump-card"
            },
            "tags_all": {
              "Name": "trump-card-server",
              "Project": "trump-card"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3abd735639a8d7f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.app",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:143985718263:instance/i-01cc571695f0e6a7c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cc571695f0e6a7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "trump-card-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e52d24faafdfd6db",
            "private_dns": "ip-172-31-7-142.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.142",
            "public_dns": "ec2-51-21-14-132.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.14.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8d3452a65d43761",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc06df79662c3178",
            "tags": {
              "Name": "trump-card-monitoring",
              "Project": "trump-card"
            },
            "tags_all": {
              "Name": "trump-card-monitoring",
              "Project": "trump-card"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6b776a5b9c44a43"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:143985718263:security-group/sg-0a3abd735639a8d7f",
            "description": "Trump Card app server - SSH restricted to my IP, HTTP/HTTPS open to everyone",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound - needed to pull Docker images from ghcr.io, apt updates, etc.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3abd735639a8d7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP - the actual game, open to the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS - reserved for later if you add a domain + TLS cert",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "193.40.13.169/32"
                ],
                "description": "SSH - only from my own IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "trump-card-sg",
            "name_prefix": "",
            "owner_id": "143985718263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trump-card-sg",
              "Project": "trump-card"
            },
            "tags_all": {
              "Name": "trump-card-sg",
              "Project": "trump-card"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242cf60e8bd0afcb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:143985718263:security-group/sg-0b6b776a5b9c44a43",
            "description": "launch-wizard-1 created 2026-07-17T05:22:17.378Z",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6b776a5b9c44a43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API direct",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "51.21.14.132/32"
                ],
                "description": "node-exporter - monitoring server only",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "launch-wizard-1",
            "name_prefix": "",
            "owner_id": "143985718263",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "trump-card-monitoring",
              "Project": "trump-card"
            },
            "tags_all": {
              "Name": "trump-card-monitoring",
              "Project": "trump-card"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242cf60e8bd0afcb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}